hphp/test/zend/bad/Zend/tests/arg_unpack/dynamic.php
<?php

$fn = function(...$args) {
    var_dump($args);
};

$fn(...[]);
$fn(...[1, 2, 3]);
$fn(1, ...[2, 3], ...[], ...[4, 5]);

?>
